--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.0'
     compile 'org.greenrobot:greendao:3.2.2'
     compile 'com.github.irshulx:laser-native-editor:2.1.0'
-    compile 'com.github.qiugang:EditTag:v1.2.3'
+//    compile 'com.github.qiugang:EditTag:v1.2.3'
+    compile project(path: ':library')
 }
