--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,7 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".ContactsActivity"
@@ -43,7 +39,18 @@
             android:name=".ContactsListActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".MeetingActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".edittag.EditTagActivity">
+
+        </activity>
+        <activity android:name=".edittag.ContactListActivity" />
+        <activity android:name=".edittag.ChipExamplesActivity"></activity>
     </application>
 
 </manifest>
