--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.github.irshulx:laser-native-editor:2.1.0'
 //    compile 'com.github.qiugang:EditTag:v1.2.3'
 //    compile project(path: ':library')
+//    compile project(path: ':laser-native-editor')
     compile 'com.github.pchmn:MaterialChipsInput:1.0.8'
     compile 'io.reactivex.rxjava2:rxjava:2.0.8'
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.3@aar'
