--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -20,18 +20,22 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:support-v4:27.1.0'
+    implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':library')
     compile project(':library2')
-    compile 'com.android.support:appcompat-v7:27.1.0'
-    compile 'com.android.support:cardview-v7:27.1.0'
-    implementation 'com.android.support:recyclerview-v7:27.1.0'
-    implementation 'com.android.support:design:27.1.0'
+    compile('com.weiwangcn.betterspinner:library:1.1.0') {
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+    }
+    compile 'com.android.support:appcompat-v7:27.1.1'
+    compile 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
     compile 'org.greenrobot:greendao:3.2.2'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-    compile project(path: ':laser-native-editor')
+//    compile project(path: ':laser-native-editor')
+    compile 'com.github.irshulx:laser-native-editor:2.1.0'
     compile 'com.github.pchmn:MaterialChipsInput:1.0.8'
     compile 'io.reactivex.rxjava2:rxjava:2.0.8'
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.3@aar'
@@ -43,3 +47,5 @@ dependencies {
     compile 'com.github.baoyachi:StepView:1.9'
     compile 'com.layer-net:step-indicator:1.1.0'
 }
+
+
