--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -23,9 +23,13 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
-    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"></uses-permission>
-    <uses-permission android:name="android.permission.READ_CALL_LOG"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    <uses-permission android:name="android.permission.WRITE_CALL_LOG" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:name=".app.AppController"
@@ -33,6 +37,13 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+        <receiver android:name=".CallBarring">
+            <intent-filter android:priority="-1">
+                <action android:name="android.intent.action.NEW_OUTGOING_CALL"/>
+                <action android:name="android.intent.action.PHONE_STATE" />
+            </intent-filter>
+        </receiver>
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -54,8 +65,8 @@
             android:screenOrientation="portrait"></activity>
         <activity
             android:name=".relationships.RelationshipActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/relationships"/>
+            android:label="@string/relationships"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".contacts.EditContactActivity"
             android:screenOrientation="portrait" />
@@ -70,7 +81,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".contacts.MeetingActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity android:name=".edittag.ContactListActivity" />
         <activity
             android:name=".relationships.ActiveDealsActivity"
@@ -78,7 +89,10 @@
         <activity
             android:name=".relationships.ActiveDealsDetailsActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".MainProfileActivity"></activity>
+        <activity android:name=".MainProfileActivity" />
+        <activity android:name=".contacts.CallLogDetailsActivity">
+
+        </activity>
     </application>
 
 </manifest>
