--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 //    compile project(path: ':laser-native-editor')
     compile 'com.github.irshulx:laser-native-editor:2.1.0'
     compile 'com.github.pchmn:MaterialChipsInput:1.0.8'
+//    compile 'com.github.qiugang:EditTag:v1.2.3'
+    compile project(':edittag')
     compile 'io.reactivex.rxjava2:rxjava:2.0.8'
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.3@aar'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
