--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         android:theme="@style/AppTheme">
         <receiver android:name=".CallBarring">
             <intent-filter android:priority="-1">
-                <action android:name="android.intent.action.NEW_OUTGOING_CALL"/>
+                <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
                 <action android:name="android.intent.action.PHONE_STATE" />
             </intent-filter>
         </receiver>
@@ -59,14 +59,10 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".opportunities.OpportunitiesActivity"
-            android:screenOrientation="portrait">
-
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".opportunities.StepView"
-            android:screenOrientation="portrait">
-
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".relationships.RelationshipActivity"
             android:label="@string/relationships"
@@ -94,12 +90,12 @@
         <activity
             android:name=".relationships.ActiveDealsDetailsActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".contacts.CallLogDetailsActivity"
+        <activity
+            android:name=".contacts.CallLogDetailsActivity"
             android:windowAnimationStyle="@android:style/Animation.Translucent"
             android:windowBackground="@android:color/transparent"
-            android:windowIsTranslucent="true">
-
-        </activity>
+            android:windowIsTranslucent="true"></activity>
+        <activity android:name=".relationships.AddQuoteActivity"></activity>
     </application>
 
 </manifest>
