--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -46,8 +46,10 @@ dependencies {
     compile files('libs/volley.jar')
 //    implementation 'com.android.volley:volley:1.0.0'
     implementation 'com.google.code.gson:gson:2.6.2'
+    compile 'com.githang:stepview:0.1'
     compile 'com.github.baoyachi:StepView:1.9'
     compile 'com.layer-net:step-indicator:1.1.0'
+    compile 'com.github.badoualy:stepper-indicator:1.0.7'
 }
 
 
