--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -59,14 +59,10 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".opportunities.OpportunitiesActivity"
-            android:screenOrientation="portrait">
-
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".opportunities.StepView"
-            android:screenOrientation="portrait">
-
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".relationships.RelationshipActivity"
             android:label="@string/relationships"
@@ -96,17 +92,15 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".contacts.CallLogDetailsActivity"
+            android:screenOrientation="portrait"
             android:windowAnimationStyle="@android:style/Animation.Translucent"
             android:windowBackground="@android:color/transparent"
-            android:windowIsTranslucent="true"
-            android:screenOrientation="portrait">
-
-        </activity>
-        <activity android:name=".relationships.AddQuoteActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:screenOrientation="portrait">
-
-        </activity>
+            android:windowIsTranslucent="true"></activity>
+        <activity
+            android:name=".relationships.AddQuoteActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"></activity>
+        <activity android:name=".opportunities.NewOpportunityActivity"></activity>
     </application>
 
 </manifest>
